# RG47-rgalaga

./: .gitignore  CMakeLists.txt  Makefile  README.md
dependencies/glfw-3.3/: CMakeCache.txt  GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
dependencies/glfw-3.3/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
dependencies/glfw-3.3/src/: Makefile  cmake_install.cmake
dependencies/glfw-3.3/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  vulkan  windows
src/: .main.c.swo  .main.c.swp  Application.cpp  Enemy.cpp  Game.cpp  GameLevel.cpp  GameObject.cpp  IndexBuffer.cpp  Missile.cpp  Player.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  Spacecraft.cpp  SpriteRenderer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  callbacks.c  init.c  main.c  spacecraft.c
src/headers/: Debug.h  Enemy.h  Game.h  GameLevel.h  GameObject.h  IndexBuffer.h  Missile.h  Player.h  Renderer.h  ResourceManager.h  Shader.h  Spacecraft.h  SpriteRenderer.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/include/: callbacks.h  constants.h  init.h  spacecraft.h
src/res/levels/: 1.lvl  2.lvl  3.lvl  4.lvl
src/res/shaders/: Basic.shader
